Update state of progress (done 1.3)

--- a/src/content/0.0/preface.tex
+++ b/src/content/0.0/preface.tex
@@ -17,7 +17,7 @@
 
 もちろん、噛み砕いた説明を用いることで明らかに間違ったことを言うリスクがありますので、この本の非公式な議論の背後にはしっかりとした数学的理論があることを確かめるようにします。私はSaunders Mac Laneの\emph{Categories for the Working Mathematician (邦訳: 圏論の基礎)}の使い古されたコピーを持っています。
 
-これは\emph{プログラマのための}圏論であるため、私はすべての主要な概念をコンピュータコードを使用して説明します。あなたはおそらく、関数型言語がより一般的な命令型言語よりも数学に近いことを知っているでしょう。それはまた、より多くの抽象化力を提供します。したがって、圏論の恩恵を受ける前にHaskellを学ぶ必要があると言いたくなるのは当然かもしれません。しかし、それでは圏論が関数型プログラミング以外に適用できないことを意味することになり、ただ単に正しくありません。したがって、私は多くのC++の例を提供します。確かに、あなたはいくつかの醜い構文を克服する必要があります。パターンが冗長性の背景から際立たないかもしれませんし、高度な抽象化の代わりにコピーアンドペーストを強いられるかもしれませんが、それはC++プログラマの宿命です。
+これは\emph{プログラマのための}圏論であるため、私はすべての主要な概念をコンピュータコードを使用して説明します。あなたはおそらく、関数型言語がより一般的な命令型言語よりも数学に近いことを知っているでしょう。それはまた、より多くの抽象化力を提供します。従って、圏論の恩恵を受ける前にHaskellを学ぶ必要があると言いたくなるのは当然かもしれません。しかし、それでは圏論が関数型プログラミング以外に適用できないことを意味することになり、ただ単に正しくありません。従って、私は多くのC++の例を提供します。確かに、あなたはいくつかの醜い構文を克服する必要があります。パターンが冗長性の背景から際立たないかもしれませんし、高度な抽象化の代わりにコピーアンドペーストを強いられるかもしれませんが、それはC++プログラマの宿命です。
 
 しかし、Haskellに関してあなたは無関係でいられません。Haskellプログラマになる必要はありませんが、C++で実装されるアイデアをスケッチし、文書化する言語としてそれを必要とします。それはちょうど私がHaskellを始めた方法です。私は、その簡潔な構文と強力な型システムがC++テンプレート、データ構造、およびアルゴリズムの理解と実装に大いに役立つことを発見しました。しかし、読者がすでにHaskellを知っていると期待することはできませんので、ゆっくりと導入し、進むにつれてすべてを説明します。
 
