--- a/src/content/1.10/natural-transformations.tex
+++ b/src/content/1.10/natural-transformations.tex
@@ -11,7 +11,7 @@
 \noindent
 ある圏を別の圏に埋め込む方法は多くあります。時にはそれらは同等のものもあれば、全く異なるものもあります。一つはソース圏全体を一つの対象に収縮させるかもしれませんが、別のものは各対象を異なる対象に、各射を異なる射に写像するかもしれません。同じ設計図が多くの異なる方法で実現されるのです。自然変換はこれらの実現を比較するのに役立ちます。関手の写像です --- それらの関手的性質を保持する特別な写像です。
 
-圏$\cat{C}$ と $\cat{D}$ の間の関手 $F$ と $G$ を考えてください。$\cat{C}$ のただ一つの対象 $a$ に注目すると、それは二つの対象、$F a$ と $G a$ に写像されます。したがって、関手の写像は $F a$ を $G a$ に写像するべきです。
+圏$\cat{C}$ と $\cat{D}$ の間の関手 $F$ と $G$ を考えてください。$\cat{C}$ のただ一つの対象 $a$ に注目すると、それは二つの対象、$F a$ と $G a$ に写像されます。従って、関手の写像は $F a$ を $G a$ に写像するべきです。
 
 \begin{figure}[H]
   \centering
@@ -19,7 +19,7 @@
 \end{figure}
 
 \noindent
-$F a$ と $G a$ は同じ圏 $\cat{D}$ の対象であることに注意してください。同じ圏の対象間の写像は、圏の性質に逆らってはなりません。我々は対象間に人工的な接続を作りたくありません。したがって、既存の接続、すなわち射を使用するのが\emph{自然}です。自然変換は射の選択です: 各対象 $a$ に対して、$F a$ から $G a$ への一つの射を選びます。自然変換を $\alpha$ と呼ぶと、この射は $\alpha$ の $a$ における\newterm{コンポーネント}、または $\alpha_a$ と呼ばれます。
+$F a$ と $G a$ は同じ圏 $\cat{D}$ の対象であることに注意してください。同じ圏の対象間の写像は、圏の性質に逆らってはなりません。我々は対象間に人工的な接続を作りたくありません。従って、既存の接続、すなわち射を使用するのが\emph{自然}です。自然変換は射の選択です: 各対象 $a$ に対して、$F a$ から $G a$ への一つの射を選びます。自然変換を $\alpha$ と呼ぶと、この射は $\alpha$ の $a$ における\newterm{コンポーネント}、または $\alpha_a$ と呼ばれます。
 
 \[\alpha_a \Colon F a \to G a\]
 $a$ は $\cat{C}$ の対象であるのに対し、$\alpha_a$ は $\cat{D}$ の射であることを念頭に置いてください。
@@ -109,7 +109,7 @@ Haskell では、関手 \code{G} 上の射 \code{f} の作用は \code{fmap} を
 \begin{snipv}
 fmap\textsubscript{G} f . alpha\textsubscript{a} = alpha\textsubscript{b} . fmap\textsubscript{F} f
 \end{snipv}
-型推論のため、これらの注釈は必要ありません、そして次の方程式が成立します: 
+型推論のため、これらの注釈は必要ありません、そして次の等式が成立します: 
 
 \begin{snip}{text}
 fmap f . alpha = alpha . fmap f
@@ -128,7 +128,7 @@ Haskell における自然性条件の自動性は「無料の定理」と関連
 Haskell での自然変換のいくつかの例を見てみましょう。最初は、リスト関手と \code{Maybe} 関手の間です。リストが空でない場合に限り、リストの先頭を返します: 
 
 \src{snippet04}
-これは \code{a} に多相的な関数です。それはどんな型 \code{a} に対しても制限なく機能するので、パラメトリック多相性の一例です。したがって、それは二つの関手間の自然変換です。しかし、自然性条件を確認するために、私たち自身を納得させるために、それを検証しましょう。
+これは \code{a} に多相的な関数です。それはどんな型 \code{a} に対しても制限なく機能するので、パラメトリック多相性の一例です。従って、それは二つの関手間の自然変換です。しかし、自然性条件を確認するために、私たち自身を納得させるために、それを検証しましょう。
 
 \src{snippet05}
 考慮すべき二つのケースがあります。空リスト: 
@@ -147,7 +147,7 @@ Haskell での自然変換のいくつかの例を見てみましょう。最初
 そして \code{Maybe} のための: 
 
 \src{snippet11}
-興味深いケースは、関手の一つが自明な \code{Const} 関手である場合です。 \code{Const} 関手からまたはそれへの自然変換は、それが返り型で多相的であるか、引数型で多相的であるかのいずれかのように見える関数のようです。
+興味深いケースは、関手の一つが自明な \code{Const} 関手である場合です。 \code{Const} 関手からまたはそれへの自然変換は、それが戻り型で多相的であるか、引数型で多相的であるかのいずれかのように見える関数のようです。
 
 例えば、\code{length} はリスト関手から \code{Const Int} 関手への自然変換として考えることができます: 
 
@@ -171,7 +171,7 @@ Haskell での自然変換のいくつかの例を見てみましょう。最初
 \src{snippet17}
 あなたは任意の型 \code{e} に対して、\code{Reader e} から任意の他の関手 \code{f} への自然変換の族を定義することができます。後で見るように、この族のメンバーは常に \code{f e} の要素と一対一の対応関係にあります (\hyperref[the-yoneda-lemma]{米田の補題})。
 
-例えば、要素 \code{()} を持つUnit型 \code{()} を考えてみましょう。関手 \code{Reader ()} は任意の型 \code{a} を関数型 \code{() -> a} に写像します。
+例えば、要素 \code{()} を持つユニット型 \code{()} を考えてみましょう。関手 \code{Reader ()} は任意の型 \code{a} を関数型 \code{() -> a} に写像します。
 これらは単に \code{a} の集合から単一の要素を選ぶすべての関数です。
 \code{a} の要素と同じ数だけこれらが存在します。ここで、この関手から \code{Maybe} 関手への自然変換を考えてみましょう: 
 
@@ -190,7 +190,7 @@ Haskell での自然変換のいくつかの例を見てみましょう。最初
 
 二つの関手 (\code{Const} 関手のエッジケースを含む) の間のパラメトリック多相的関数は常に自然変換です。すべての標準的な代数的データ型が関手であるため、そのような型間の多相的関数は自然変換です。
 
-また、関数型を私たちの手元に持っています。これらは返り値の型で関手的です。私たちはそれらを関手 (\code{Reader} 関手のような) を構成し、高階関数である自然変換を定義するために使用することができます。
+また、関数型を私たちの手元に持っています。これらは戻り値の型で関手的です。私たちはそれらを関手 (\code{Reader} 関手のような) を構成し、高階関数である自然変換を定義するために使用することができます。
 
 ただし、関数型は引数型で共変ではありません。\newterm{反変}です。もちろん反変関手は、逆圏からの共変関手に相当します。二つの反変関手間の多相的関数はまだ圏論的な意味で自然変換ですが、それは逆圏から Haskell 型への関手に対して機能します。
 
@@ -212,7 +212,7 @@ Haskell での自然変換のいくつかの例を見てみましょう。最初
 共変でも反変でもない型コンストラクタがありますか？ここに一つの例があります: 
 
 \src{snippet26}
-これは関手ではありません。なぜなら同じ型 \code{a} が負 (反変) と正 (共変) の位置の両方で使用されているためです。そのため、\code{fmap} や \code{contramap} をこの型のために実装することはできません。したがって、以下の署名を持つ関数: 
+これは関手ではありません。なぜなら同じ型 \code{a} が負 (反変) と正 (共変) の位置の両方で使用されているためです。そのため、\code{fmap} や \code{contramap} をこの型のために実装することはできません。従って、以下の署名を持つ関数: 
 
 \src{snippet27}
 ここで \code{f} は任意の関手で、自然変換にはなり得ません。興味深いことに、自然変換の一般化である、双自然変換と呼ばれるものが、このようなケースを扱います。私たちは、エンドについて議論する時に、それらについて説明します。
@@ -251,7 +251,7 @@ Haskell での自然変換のいくつかの例を見てみましょう。最初
 
 最後に、各関手 $F$ には、そのコンポーネントが恒等射である自己恒等自然変換 $1_F$ があります: 
 \[\id_{F a} \Colon F a \to F a\]
-したがって、確かに、関手は圏を形成します。
+従って、確かに、関手は圏を形成します。
 
 表記法について一言。Saunders Mac Lane に従って、私は自然変換合成の種類について説明したばかりのものにドットを使用します。問題は、自然変換を合成する二つの方法があるということです。この一つは垂直合成と呼ばれます、なぜなら関手は通常、それを説明する図で縦に積み上げられるからです。垂直合成は関手圏を定義するのに重要です。間もなく水平合成について説明します。
 
@@ -273,7 +273,7 @@ Haskell での自然変換のいくつかの例を見てみましょう。最初
 \noindent
 関手圏 $\cat{{[}C, D{]}}$ もまた二つの圏間の関手の集合 (及び射としての自然変換) です。その対象は $\cat{Cat(C, D)}$ のメンバーと同じです。さらに、関手圏は、圏であるため、それ自体が $\Cat$ の対象でなければなりません (二つの小さい圏間の関手圏はそれ自体小さいです)。我々は圏内のホム集合と同じ圏内の対象との間の関係を持っています。この状況は、前章で見た指数関数対象と全く同じです。$\Cat$ で後者をどのように構成するか見てみましょう。
 
-指数関数を構成するためには、まず積を定義する必要があります。$\Cat$ では、これは比較的簡単です。なぜなら小さい圏は\emph{集合}の対象であり、集合のデカルト積を定義する方法を知っているからです。そのため、積圏 $\cat{C\times D}$ の対象は単に対象のペア、$(c, d)$で、一つは $\cat{C}$ から、もう一つは $\cat{D}$ からです。同様に、二つのそのようなペア、$(c, d)$ と $(c', d')$ の間の射は、射のペア、$(f, g)$で、$f \Colon c \to c'$ と $g \Colon d \to d'$ です。これらの射のペアはコンポーネントごとに合成され、常に恒等射のペアが存在します。それは単に恒等射のペアです。要するに、$\Cat$ はデカルト閉圏であり、そこには任意の圏のペアの指数関数対象があります。
+指数関数を構成するためには、まず積を定義する必要があります。$\Cat$ では、これは比較的簡単です。なぜなら小さい圏は\emph{集合}の対象であり、集合の直積を定義する方法を知っているからです。そのため、積圏 $\cat{C\times D}$ の対象は単に対象のペア、$(c, d)$で、一つは $\cat{C}$ から、もう一つは $\cat{D}$ からです。同様に、二つのそのようなペア、$(c, d)$ と $(c', d')$ の間の射は、射のペア、$(f, g)$で、$f \Colon c \to c'$ と $g \Colon d \to d'$ です。これらの射のペアはコンポーネントごとに合成され、常に恒等射のペアが存在します。それは単に恒等射のペアです。要するに、$\Cat$ はCartesian閉圏であり、そこには任意の圏のペアの指数関数対象があります。
 そして「対象」によって $\Cat$ で意味するのは圏なので、$\cat{D^C}$ は圏です。これを圏 $\cat{C}$ と $\cat{D}$ の間の関手圏と同一視することができます。
 
 \section{2-圏}
