--- a/src/content/1.6/simple-algebraic-data-types.tex
+++ b/src/content/1.6/simple-algebraic-data-types.tex
@@ -31,13 +31,13 @@
 そして、この関数は可逆です: 
 
 \src{snippet05}
-したがって、これは同型です。これらは単に同じデータを異なる方法で再パッケージングする異なる方法です。
+従って、これは同型です。これらは単に同じデータを異なる方法で再パッケージングする異なる方法です。
 
 型の積の生成を、型に対する二項演算として解釈することができます。その観点から、上記の同型はモノイドで見た結合則に非常に似ています: 
 \[(a * b) * c = a * (b * c)\]
 ただし、モノイドの場合、二つの積の組み合わせ方は等価でしたが、ここでは「同型上で等しい」だけです。
 
-同型を受け入れることができ、厳密な等価性にこだわらない場合、さらに進んでUnit型 \code{()} を、1が乗算の単位要素であるのと同じ方法で積の単位として示すことができます。確かに、ある型 \code{a} の値と単位のペアリングは、いかなる情報も追加しません。型: 
+同型を受け入れることができ、厳密な等価性にこだわらない場合、さらに進んでユニット型 \code{()} を、1が乗算の単位要素であるのと同じ方法で積の単位として示すことができます。確かに、ある型 \code{a} の値と単位のペアリングは、いかなる情報も追加しません。型: 
 
 \src{snippet06}
 は \code{a} と同型です。ここに同型があります: 
@@ -45,7 +45,7 @@
 \src{snippet07}
 
 \src{snippet08}
-これらの観察は、集合の圏 $\Set$ が\newterm{モノイダル圏}であると言うことによって形式化できます。これは、対象 (ここではデカルト積を取る) を乗算できる意味で、圏でありながらもモノイドです。モノイダル圏について、そして完全な定義については後で詳しく説明します。
+これらの観察は、集合の圏 $\Set$ が\newterm{モノイダル圏}であると言うことによって形式化できます。これは、対象 (ここでは直積を取る) を乗算できる意味で、圏でありながらもモノイドです。モノイダル圏について、そして完全な定義については後で詳しく説明します。
 
 特に、和型と組み合わせる場合、Haskellで積型を定義するより一般的な方法があります。これは複数の引数を持つ名前付きコンストラクタを使用します。例えば、ペアは次のように代替的に定義できます: 
 
@@ -107,7 +107,7 @@ Haskellのトリックを使って、関数 \code{isPrefixOf} を逆引用符で
 実際、集合の圏 $\Set$ は余積に関しても (対称的な) モノイダル圏です。二項演算の役割は不連続和によって演じられ、単位要素の役割は始対象によって演じられます。型の観点では、\code{Either} がモノイダル演算子として、\code{Void}、すなわち住人のいない型がその中立要素として機能します。\code{Either} をプラスと考え、\code{Void} をゼロと考えることができます。実際に、\code{Void} を和型に加えてもその内容は変わりません。例えば: 
 
 \src{snippet23}
-は \code{a} と同型です。それはこの型の \code{Right} バージョンを構成する方法がないためです --- \code{Void} の値は存在しません。 \code{Either a Void} の唯一の住人は \code{Left} コンストラクタを使って構成され、単に \code{a} 型の値をカプセル化しています。したがって、象徴的に $a + 0 = a$ です。
+は \code{a} と同型です。それはこの型の \code{Right} バージョンを構成する方法がないためです --- \code{Void} の値は存在しません。 \code{Either a Void} の唯一の住人は \code{Left} コンストラクタを使って構成され、単に \code{a} 型の値をカプセル化しています。従って、象徴的に $a + 0 = a$ です。
 
 和型はHaskellではかなり一般的ですが、そのC++の等価物であるunionやvariantはあまり一般的ではありません。その理由はいくつかあります。
 
@@ -130,7 +130,7 @@ enum { Red, Green, Blue };
 \code{Maybe} 型は二つの型の和です。二つのコンストラクタを個別の型に分離すると、最初のものは次のようになります: 
 
 \src{snippet27}
-これは \code{Nothing} と呼ばれる値を一つ持つ列挙型です。言い換えると、それは単集合であり、Unit型 \code{()} と同等です。二番目の部分: 
+これは \code{Nothing} と呼ばれる値を一つ持つ列挙型です。言い換えると、それは単集合であり、ユニット型 \code{()} と同等です。二番目の部分: 
 
 \src{snippet28}
 は単に型 \code{a} をカプセル化しています。私たちは、\code{Maybe} を次のようにエンコードできたでしょう: 
@@ -154,14 +154,14 @@ public:
 \end{snip}
 二つのHaskellコンストラクタ \code{Nil} と \code{Cons} は、同様の引数 (\code{Nil} にはなし、\code{Cons} には値とリスト) を持つ二つのオーバーロードされた \code{List} コンストラクタに翻訳されます。和型の二つのコンポーネントを区別するためにタグを必要としない代わりに、 \code{\_head} の特別な \code{nullptr} 値を使用して \code{Nil} をエンコードします。
 
-しかし、HaskellとC++の型の主な違いは、Haskellのデータ構造が不変であることです。特定のコンストラクタを使ってオブジェクトを作成すると、そのオブジェクトは永遠にどのコンストラクタが使われたか、どの引数がそれに渡されたかを覚えています。したがって、 \code{Just "energy"} として作成された \code{Maybe} オブジェクトは決して \code{Nothing} にはなりません。同様に、空のリストは永遠に空であり、3つの要素を持つリストは常に同じ3つの要素を持ちます。
+しかし、HaskellとC++の型の主な違いは、Haskellのデータ構造が不変であることです。特定のコンストラクタを使ってオブジェクトを作成すると、そのオブジェクトは永遠にどのコンストラクタが使われたか、どの引数がそれに渡されたかを覚えています。従って、 \code{Just "energy"} として作成された \code{Maybe} オブジェクトは決して \code{Nothing} にはなりません。同様に、空のリストは永遠に空であり、3つの要素を持つリストは常に同じ3つの要素を持ちます。
 
 この不変性が構成を可逆にします。オブジェクトが与えられたら、それを構成に使用されたパーツまで常に分解することができます。この分解はパターンマッチングで行われ、コンストラクタはパターンとして再利用されます。コンストラクタの引数、もしあれば、変数 (または他のパターン) に置き換えられます。
 
 \code{List} データ型には二つのコンストラクタがあるため、任意の \code{List} の分解は、それらのコンストラクタに対応する二つのパターンを使います。一つは空の \code{Nil} リストにマッチし、もう一つは \code{Cons} で構成されたリストにマッチします。例えば、ここに \code{List} 上の単純な関数の定義があります: 
 
 \src{snippet31}
-\code{maybeTail} の定義の最初の部分は、パターンとして \code{Nil} コンストラクタを使用し、\code{Nothing} を返します。二番目の部分は、\code{Cons} コンストラクタをパターンとして使用します。最初のコンストラクタ引数をワイルドカードで置き換えます。なぜなら、私たちはそれに興味がないからです。 \code{Cons} への二番目の引数は変数 \code{t} に束縛されます (これらのものを変数と呼びますが、厳密に言えば、それらは決して変化しません: 一度式に束縛されると、変数は決して変わりません)。返り値は \code{Just t} です。今、あなたの \code{List} がどのように作成されたかに応じて、それは一つの節にマッチします。それが \code{Cons} を使って作成された場合、それに渡された二つの引数が回収されます (そして最初のものが破棄されます)。
+\code{maybeTail} の定義の最初の部分は、パターンとして \code{Nil} コンストラクタを使用し、\code{Nothing} を返します。二番目の部分は、\code{Cons} コンストラクタをパターンとして使用します。最初のコンストラクタ引数をワイルドカードで置き換えます。なぜなら、私たちはそれに興味がないからです。 \code{Cons} への二番目の引数は変数 \code{t} に束縛されます (これらのものを変数と呼びますが、厳密に言えば、それらは決して変化しません: 一度式に束縛されると、変数は決して変わりません)。戻り値は \code{Just t} です。今、あなたの \code{List} がどのように作成されたかに応じて、それは一つの節にマッチします。それが \code{Cons} を使って作成された場合、それに渡された二つの引数が回収されます (そして最初のものが破棄されます)。
 
 さらに複雑な和型は、C++で多型クラス階層を使用して実装されます。共通の祖先を持つクラスの族は、一つの変種型として理解することができます。その中で、vtableは隠されたタグとして機能します。Haskellではコンストラクタにパターンマッチングを行い、特殊なコードを呼び出すことが行われるのと同様のことが、C++ではvtableポインタに基づいて仮想関数への呼び出しをディスパッチすることで達成されます。
 
@@ -171,11 +171,11 @@ public:
 
 個別に取り扱うと、積型と和型は多様な有用なデータ構造を定義するために使用することができますが、2つを組み合わせることから真の強みが生まれます。再び、構成の力を呼び出しています。
 
-これまでに発見したことを要約してみましょう。我々は、\code{Void} を中立要素とする和型と、Unit型 \code{()} を中立要素とする積型という、2つの可換モノイダル構造を型システムの下に見てきました。それらを加算と乗算に類似させて考えたいと思います。この類推では、\code{Void} はゼロに、単位、\code{()} は一に相当するでしょう。
+これまでに発見したことを要約してみましょう。我々は、\code{Void} を中立要素とする和型と、ユニット型 \code{()} を中立要素とする積型という、2つの可換モノイダル構造を型システムの下に見てきました。それらを加算と乗算に類似させて考えたいと思います。この類推では、\code{Void} はゼロに、単位、\code{()} は一に相当するでしょう。
 
 この類推をどこまで伸ばすことができるか見てみましょう。例えば、ゼロによる乗算はゼロを与えるのか？言い換えれば、一つのコンポーネントが \code{Void} である積型は \code{Void} と同型ですか？例えば、\code{Int} と \code{Void} のペアを作成することは可能でしょうか？
 
-ペアを作成するためには2つの値が必要です。整数を簡単に思いつくことはできますが、 \code{Void} 型の値はありません。したがって、任意の型 \code{a} に対して、型 \code{(a, Void)} は住人がいない --- 値がない --- したがって \code{Void} と同等です。言い換えれば、$a \times 0 = 0$ です。
+ペアを作成するためには2つの値が必要です。整数を簡単に思いつくことはできますが、 \code{Void} 型の値はありません。従って、任意の型 \code{a} に対して、型 \code{(a, Void)} は住人がいない --- 値がない --- 従って \code{Void} と同等です。言い換えれば、$a \times 0 = 0$ です。
 
 加算と乗算を結び付けるもう一つのことは分配則です: 
 \[a \times (b + c) = a \times b + a \times c\]
