--- a/src/content/1.7/functors.tex
+++ b/src/content/1.7/functors.tex
@@ -195,7 +195,7 @@ optional<B> fmap(std::function<B(A)> f, optional<A> opt) {
 \begin{snip}{cpp}
 auto g = fmap(f);
 \end{snip}
-特に将来的には、\code{fmap} をオーバーロードする複数の関手が存在する可能性がある場合です。 (もうすぐ私たちはもっと多くの関手を見ることになります。) 
+特に将来的には、\code{fmap} をオーバーロードする複数の関手が存在する可能性がある場合です。(もうすぐ私たちはもっと多くの関手を見ることになります。) 
 
 \subsection{型クラス}
 
@@ -285,7 +285,7 @@ std::copy( std::begin(w)
 あなたがいくらかの直感を得たかもしれない今 — 例えば、関手は何らかのコンテナであるとか、少なくともそれらがパラメータ化されている型の値を含んでいるオブジェクトであるとか — まったく異なるものの例を示しましょう。型 \code{a} を \code{a} を返す関数の型への写像を考えてみてください。私たちは関数型について深くは話していません — その完全な圏論的扱いはこれから来ます — しかし、プログラマとしてそれらについてある程度の理解を持っています。Haskellでは、関数型は2つの型を取る矢印型コンストラクタ \code{(->)} を使用して構成されます: 引数型と結果型です。あなたは既にそれを中置形式で見てきました、\code{a -> b} ですが、括弧を使用すると接頭辞形式でも同様に使用することができます: 
 
 \src{snippet19}
-通常の関数と同様に、2つ以上の引数を持つ型関数は部分適用することができます。したがって、矢印にただ一つの型引数を与えると、それはまだ別の型 \code{b} を必要としています。完全な型 \code{a -> b} を生成します。それが立っている状態では、それは型コンストラクタの全体の族を定義します。\code{a} によってパラメータ化された族です。これが関手の族であるかどうかを見てみましょう。2つの型パラメータを扱うことは少し混乱するかもしれませんので、いくつかのリネーミングをしましょう。引数型を \code{r} と呼び、結果型を \code{a} と呼びましょう、これは私たちの以前の関手定義と一致します。それで私たちの型コンストラクタは任意の型 \code{a} を型 \code{r -> a} に写像します。それが関手であることを示すためには、関数 \code{a -> b} を持ち上げて、\code{r -> a} を取り \code{r -> b} を返す関数を定義したいと思います。これらは、それぞれ、型コンストラクタ \code{(->) r} が \code{a} および \code{b} に作用するときに形成される型です。この場合に適用される \code{fmap} の型シグネチャはこちらです: 
+通常の関数と同様に、2つ以上の引数を持つ型関数は部分適用することができます。従って、矢印にただ一つの型引数を与えると、それはまだ別の型 \code{b} を必要としています。完全な型 \code{a -> b} を生成します。それが立っている状態では、それは型コンストラクタの全体の族を定義します。\code{a} によってパラメータ化された族です。これが関手の族であるかどうかを見てみましょう。2つの型パラメータを扱うことは少し混乱するかもしれませんので、いくつかのリネーミングをしましょう。引数型を \code{r} と呼び、結果型を \code{a} と呼びましょう、これは私たちの以前の関手定義と一致します。それで私たちの型コンストラクタは任意の型 \code{a} を型 \code{r -> a} に写像します。それが関手であることを示すためには、関数 \code{a -> b} を持ち上げて、\code{r -> a} を取り \code{r -> b} を返す関数を定義したいと思います。これらは、それぞれ、型コンストラクタ \code{(->) r} が \code{a} および \code{b} に作用するときに形成される型です。この場合に適用される \code{fmap} の型シグネチャはこちらです: 
 
 \src{snippet21}
 次のパズルを解かなければなりません: 関数 \code{f :: a -> b} と関数 \code{g :: r -> a} が与えられたとき、関数 \code{r -> b} を作成します。2つの関数を合成する唯一の方法があり、その結果はちょうど私たちが必要とするものです。それでこちらが私たちの \code{fmap} の実装です: 
