--- a/src/content/2.2/limits-and-colimits.tex
+++ b/src/content/2.2/limits-and-colimits.tex
@@ -26,7 +26,7 @@
 \end{figure}
 
 \noindent
-これで二つの関手、$\Delta_c$と$D$が$\cat{2}$と$\cat{C}$の間にできましたから、それらの間の自然変換について考えるのは自然です。$\cat{2}$には二つの対象しかないので、自然変換には二つのコンポーネントがあります。$\cat{2}$の対象$1$は$\Delta_c$によって$c$に、そして$D$によって$a$に写像されます。したがって、$\Delta_c$と$D$の間の自然変換のコンポーネント$1$は、$c$から$a$への射です。これを$p$と呼びましょう。同様に、二番目のコンポーネントは$c$から$b$への射$q$です --- $D$による$\cat{2}$の対象$2$の像です。しかし、これらはまさに私たちが積の元の定義で使用した二つの射影のようです。したがって、対象と射影を選ぶ代わりに、関手と自然変換を選ぶだけでよいのです。この単純な場合では、自然変換に対する自然性条件は、$\cat{2}$に恒等射以外の射がないため、自明に満たされます。
+これで二つの関手、$\Delta_c$と$D$が$\cat{2}$と$\cat{C}$の間にできましたから、それらの間の自然変換について考えるのは自然です。$\cat{2}$には二つの対象しかないので、自然変換には二つのコンポーネントがあります。$\cat{2}$の対象$1$は$\Delta_c$によって$c$に、そして$D$によって$a$に写像されます。従って、$\Delta_c$と$D$の間の自然変換のコンポーネント$1$は、$c$から$a$への射です。これを$p$と呼びましょう。同様に、二番目のコンポーネントは$c$から$b$への射$q$です --- $D$による$\cat{2}$の対象$2$の像です。しかし、これらはまさに私たちが積の元の定義で使用した二つの射影のようです。従って、対象と射影を選ぶ代わりに、関手と自然変換を選ぶだけでよいのです。この単純な場合では、自然変換に対する自然性条件は、$\cat{2}$に恒等射以外の射がないため、自明に満たされます。
 
 \begin{figure}[H]
   \centering
@@ -74,7 +74,7 @@
 \end{figure}
 
 \noindent
-因子化射を錐の圏の射として取ります。これらの射が確かに合成され、恒等射が因子化射であることを確認するのは簡単です。したがって、錐は圏を形成します。
+因子化射を錐の圏の射として取ります。これらの射が確かに合成され、恒等射が因子化射であることを確認するのは簡単です。従って、錐は圏を形成します。
 
 これで、普遍錐を錐の圏の\emph{終対象}として定義することができます。終対象の定義は、他のどの対象からもその対象に一意の射があることを意味します。私たちの場合、それは他のどの錐の頂点からも普遍錐の頂点への一意の因子化射があることを意味します。この普遍錐を図式$D$の\emph{極限}、$\Lim[D]$と呼びます (文献では、しばしば$\Lim$記号の下に$I$に向かって左向きの矢印を見ます)。しばしば、この錐の頂点を単に極限 (または極限対象) と呼びます。
 
@@ -96,7 +96,7 @@
 \[u \Colon c \to \Lim[D]\]
 $u$を$f$で前合成すると、次のものが得られます: 
 \[u \circ f \Colon c' \to \Lim[D]\]
-そして、これは$\cat{C}(c', \Lim[D])$の要素です --- したがって、確かに、我々は射の写像を見つけました: 
+そして、これは$\cat{C}(c', \Lim[D])$の要素です --- 従って、確かに、我々は射の写像を見つけました: 
 
 \src{snippet02}
 $c$と$c'$の順序の反転に注意してください --- これは\emph{反変}関手の特徴です。
@@ -141,7 +141,7 @@ $f$と$\alpha$が与えられた場合、$\mathit{Nat}(\Delta_{c'}, D)$のメン
 
 最も重要な結果は、この同型の自然性条件が、錐の写像の交換条件と正確に一致することです。
 
-これからのアトラクションのプレビューとして、集合$\mathit{Nat}(\Delta_c, D)$を関手圏のホム集合と見なすことができると言及しておきます。したがって、私たちの自然同型は二つのホム集合を関連付けており、これは随伴と呼ばれるさらに一般的な関係を指しています。
+これからのアトラクションのプレビューとして、集合$\mathit{Nat}(\Delta_c, D)$を関手圏のホム集合と見なすことができると言及しておきます。従って、私たちの自然同型は二つのホム集合を関連付けており、これは随伴と呼ばれるさらに一般的な関係を指しています。
 
 \section{極限の例}
 
@@ -167,7 +167,7 @@ $f$と$\alpha$が与えられた場合、$\mathit{Nat}(\Delta_{c'}, D)$のメン
 
 \src{snippet05}
 
-これは$q$がこれらの方程式の一つ、例えば\code{q = f . p}によって一意に決まることを教えてくれます。したがって、私たちは図からそれを省略することができます。ですから、私たちが残されるのは次の一つの条件です: 
+これは$q$がこれらの等式の一つ、例えば\code{q = f . p}によって一意に決まることを教えてくれます。従って、私たちは図からそれを省略することができます。ですから、私たちが残されるのは次の一つの条件です: 
 
 \src{snippet06}
 
