--- a/src/content/2.5/the-yoneda-lemma.tex
+++ b/src/content/2.5/the-yoneda-lemma.tex
@@ -1,6 +1,6 @@
 % !TEX root = ../../ctfp-print.tex
 
-\lettrine[lhang=0.17]{圏}{論}のほとんどの構成は、数学の他のより具体的な領域からの結果の一般化です。積、余積、モノイド、指数などは、圏論が知られる前から知られていました。それらは数学の異なる分野で異なる名前で知られていたかもしれません。集合論におけるデカルト直積、順序論におけるミート、論理学における論理積 — これらはすべて圏論的積の抽象的なアイデアの具体的な例です。
+\lettrine[lhang=0.17]{圏}{論}のほとんどの構成は、数学の他のより具体的な領域からの結果の一般化です。積、余積、モノイド、指数などは、圏論が知られる前から知られていました。それらは数学の異なる分野で異なる名前で知られていたかもしれません。集合論における直積、順序論におけるミート、論理学における論理積 — これらはすべて圏論的積の抽象的なアイデアの具体的な例です。
 
 この点で、米田の補題は他の数学の分野でほとんどまたは全く前例のない一般的な圏についての包括的な声明として際立っています。いくつかは、その最も近い類似物は群論のCayleyの定理です (すべての群はいくつかの集合の置換群と同型です)。
 
@@ -178,7 +178,7 @@ psi fa h = fmap h fa
   \item
         対象はあるが、恒等射以外の射がない離散圏に対して、米田の補題はどのように機能しますか？
   \item
-        単位のリスト\code{{[}(){]}}は、その長さ以外の情報を含みません。したがって、データ型として、それは整数のエンコーディングと見なすことができます。空リストはゼロを、一つの要素のリスト\code{{[}(){]}} (値であり型ではありません) は一を、そして以下同様です。リスト関手に対する米田の補題を使用して、このデータ型の別の表現を構成してください。
+        単位のリスト\code{{[}(){]}}は、その長さ以外の情報を含みません。従って、データ型として、それは整数のエンコーディングと見なすことができます。空リストはゼロを、一つの要素のリスト\code{{[}(){]}} (値であり型ではありません) は一を、そして以下同様です。リスト関手に対する米田の補題を使用して、このデータ型の別の表現を構成してください。
 \end{enumerate}
 
 \section{参考文献}
