--- a/src/content/3.11/kan-extensions.tex
+++ b/src/content/3.11/kan-extensions.tex
@@ -75,7 +75,7 @@
 \noindent
 これを見ると、ある意味で、Kan拡張は「関手の乗算の逆」として作用することに気づけます。一部の著者は、$\Ran_{K}D$ のために $D/K$ という表記を使います。確かに、この表記では、$\varepsilon$ の定義も、右Kan拡張の余単位とも呼ばれるものも、単純な相殺のように見えます:
 \[\varepsilon \Colon D/K \circ K \to D\]
-Kan拡張のもう一つの解釈は、関手 $K$ が圏 $\cat{I}$ を $\cat{A}$ の内部に埋め込むことを考慮するものです。最も単純なケースでは、$\cat{I}$ は $\cat{A}$ の部分圏かもしれません。私たちは $\cat{I}$ を $\cat{C}$ にマッピングする関手 $D$ を持っています。$D$ を $\cat{A}$ 全体に定義された関手 $F$ に拡張できますか？理想的には、そのような拡張は $F \circ K$ を $D$ と同型にするでしょう。言い換えれば、$F$ は $D$ の始域を $\cat{A}$ に拡張するでしょう。しかし、完全な同型は通常求められるものとしては多すぎるので、私たちはただその半分、つまり $F \circ K$ から $D$ への片方向の自然変換 $\varepsilon$ で満足できます。 (左Kan拡張は別の方向を選びます。) 
+Kan拡張のもう一つの解釈は、関手 $K$ が圏 $\cat{I}$ を $\cat{A}$ の内部に埋め込むことを考慮するものです。最も単純なケースでは、$\cat{I}$ は $\cat{A}$ の部分圏かもしれません。私たちは $\cat{I}$ を $\cat{C}$ にマッピングする関手 $D$ を持っています。$D$ を $\cat{A}$ 全体に定義された関手 $F$ に拡張できますか？理想的には、そのような拡張は $F \circ K$ を $D$ と同型にするでしょう。言い換えれば、$F$ は $D$ の始域を $\cat{A}$ に拡張するでしょう。しかし、完全な同型は通常求められるものとしては多すぎるので、私たちはただその半分、つまり $F \circ K$ から $D$ への片方向の自然変換 $\varepsilon$ で満足できます。(左Kan拡張は別の方向を選びます。) 
 
 \begin{figure}[H]
   \centering
@@ -244,7 +244,7 @@ Kan拡張のエンド/余エンドの式は、Haskellに簡単に翻訳できま
 \src{snippet05}
 左Kan拡張は余エンドです:
 \[\Lan_{K}D a = \int^i \cat{A}(K i, a)\times{}D i\]
-したがって、存在量化子として表されます。記号的には:
+従って、存在量化子として表されます。記号的には:
 
 \begin{snip}{haskell}
 Lan k d a = exists i. (k i -> a, d i)
