--- a/src/content/3.13/topoi.tex
+++ b/src/content/3.13/topoi.tex
@@ -71,7 +71,7 @@
 \noindent
 この図を分析しましょう。引き戻し方程式は: 
 \[\mathit{true}\ .\ \mathit{unit} = \chi\ .\ f\]
-関数\(\mathit{true}\ .\ \mathit{unit}\)は\(a\)の各要素を「真」にマップします。したがって\(f\)は\(a\)の全ての要素を\(\chi\)が「真」であるところの\(b\)の要素にマップしなければなりません。これらは、特性関数\(\chi\)によって指定される部分集合の要素です。したがって、\(f\)の像は確かに問題の部分集合です。引き戻しの普遍性は\(f\)が単射であることを保証します。
+関数\(\mathit{true}\ .\ \mathit{unit}\)は\(a\)の各要素を「真」にマップします。従って\(f\)は\(a\)の全ての要素を\(\chi\)が「真」であるところの\(b\)の要素にマップしなければなりません。これらは、特性関数\(\chi\)によって指定される部分集合の要素です。従って、\(f\)の像は確かに問題の部分集合です。引き戻しの普遍性は\(f\)が単射であることを保証します。
 
 この引き戻し図は、\(\Set\)以外の圏で分類対象を定義するために使用することができます。そのような圏は終対象を持たなければならず、これによりモノ射\(\mathit{true}\)を定義することができます。それはまた、引き戻しを持たなければなりません --- 実際の要件は、それがすべての有限極限を持っていることです (引き戻しは有限極限の一例です)。それらの前提の下で、私たちは分類対象\(\Omega\)をその特性によって定義します: すべてのモノ射\(f\)には、引き戻し図を完成させる一意的な射\(\chi\)があります。
 
@@ -81,7 +81,7 @@
 
 単射\(f\)と特性関数\(\chi\)の間に一対一の対応関係があるとは言えません、なぜなら引き戻しは同型によってのみ一意であるからです。しかし、以前に部分集合を同値な単射の族として定義したことを思い出してください。私たちは、\(b\)への同値なモノ射の族として\(b\)の部分対象を定義することによってそれを一般化することができます。このモノ射の族は、図の引き戻しと同値な族と一対一の対応関係にあります。
 
-したがって、\(b\)の部分対象の集合、\(\mathit{Sub}(b)\)をモノ射の族として定義し、それが\(\Omega\)への\(b\)からの射の集合と同型であることを見ることができます: 
+従って、\(b\)の部分対象の集合、\(\mathit{Sub}(b)\)をモノ射の族として定義し、それが\(\Omega\)への\(b\)からの射の集合と同型であることを見ることができます: 
 \[\mathit{Sub}(b) \cong \cat{C}(b, \Omega)\]
 これは2つの関手の自然な同型です。言い換えると、\(\mathit{Sub}(-)\)は\(\Omega\)という対象の表現可能な (反変) 関手です。
 
@@ -92,7 +92,7 @@
 \begin{enumerate}
   \tightlist
   \item
-        デカルト閉である: すべての積、終対象、および右随伴として定義される指数関数 (指数対象) を持っています。
+        Cartesian閉である: すべての積、終対象、および右随伴として定義される指数関数 (指数対象) を持っています。
   \item
         すべての有限図表に対して極限を持っています。
   \item
