--- a/src/content/3.15/monads-monoids-and-categories.tex
+++ b/src/content/3.15/monads-monoids-and-categories.tex
@@ -107,7 +107,7 @@
 \noindent
 これらはモナドを定義する二つの操作として認識します (Haskellでは\code{return}と\code{join}と呼ばれます)、そしてモノイド則はモナド則になります。
 
-さて、この定義から自己関手の言及をすべて取り除きましょう。双圏$\cat{C}$を始めにして、それにおける$0$-セル$a$を選びます。以前に見たように、ホム圏$\cat{C}(a, a)$はモノイダル圏です。したがって、$\cat{C}(a, a)$におけるモノイドを定義することができます。$1$-セル、$T$を選び、そして二つの$2$-セルを選びます: 
+さて、この定義から自己関手の言及をすべて取り除きましょう。双圏$\cat{C}$を始めにして、それにおける$0$-セル$a$を選びます。以前に見たように、ホム圏$\cat{C}(a, a)$はモノイダル圏です。従って、$\cat{C}(a, a)$におけるモノイドを定義することができます。$1$-セル、$T$を選び、そして二つの$2$-セルを選びます: 
 \begin{align*}
   \eta & \Colon I \to T         \\
   \mu  & \Colon T \circ T \to T
