--- a/src/content/3.4/monads-programmers-definition.tex
+++ b/src/content/3.4/monads-programmers-definition.tex
@@ -109,7 +109,7 @@ f >=> return = f                  -- 右単位則
 \src{snippet11}
 確かに魚演算子の定義よりも短いですね。
 
-さらに、\code{m}が関手であるという事実を利用してbindをさらに解体することができます。関数\code{a -> m b}を\code{m a}の内容に適用するために\code{fmap}を使用できます。これにより、\code{a}は\code{m b}に変わります。したがって、適用の結果は型\code{m (m b)}になります。これはまさに我々が求める結果型\code{m b}ではありませんが、近いです。必要なのは、\code{m}の二重適用を崩壊させるか平坦化する関数です。そのような関数は\code{join}と呼ばれます: 
+さらに、\code{m}が関手であるという事実を利用してbindをさらに解体することができます。関数\code{a -> m b}を\code{m a}の内容に適用するために\code{fmap}を使用できます。これにより、\code{a}は\code{m b}に変わります。従って、適用の結果は型\code{m (m b)}になります。これはまさに我々が求める結果型\code{m b}ではありませんが、近いです。必要なのは、\code{m}の二重適用を崩壊させるか平坦化する関数です。そのような関数は\code{join}と呼ばれます: 
 
 \src{snippet12}
 \code{join}を使って、bindを次のように書き換えることができます: 
@@ -160,7 +160,7 @@ f >=> return = f                  -- 右単位則
 ここで、\code{do}ブロック内の各行は、デシュガーされたコード内の新しいネストされたbindを導入します: 
 
 \src{snippet23}
-\code{tell}はUnit値を生成するので、それを次のラムダに渡す必要はありません。モナド的な結果の内容を無視する (しかしその効果ではない --- ここではログへの貢献) ことはかなり一般的なので、その場合にbindを置き換える特別な演算子があります: 
+\code{tell}はユニット値を生成するので、それを次のラムダに渡す必要はありません。モナド的な結果の内容を無視する (しかしその効果ではない --- ここではログへの貢献) ことはかなり一般的なので、その場合にbindを置き換える特別な演算子があります: 
 
 \src{snippet24}
 私たちのコードの実際のデシュガーは次のようになります: 
