--- a/src/content/3.6/monads-categorically.tex
+++ b/src/content/3.6/monads-categorically.tex
@@ -22,7 +22,7 @@
 
 これは少し動機付けです。さあ、モナドの数学に取り組みましょう。数学者はプログラマよりも異なる記法を好むことがあります。彼らは自己関手には文字$T$を使用し、ギリシャ文字: $\mu$は\code{join}に、$\eta$は\code{return}に対応します。両方の\code{join}と\code{return}は多相的な関数なので、それらが自然変換に対応すると推測できます。
 
-したがって、圏論では、モナドはペアの自然変換$\mu$と$\eta$を備えた自己関手$T$として定義されます。
+従って、圏論では、モナドはペアの自然変換$\mu$と$\eta$を備えた自己関手$T$として定義されます。
 
 $\mu$は、関手$T^2$から$T$に戻る自然変換です。$T^2$は単に関手自体とその自体の組み合わせ、$T \circ T$です (この種の二乗は自己関手に対してのみ実行できます)。
 \[\mu \Colon T^2 \to T\]
@@ -109,9 +109,9 @@ Haskellでの\code{mappend}の定義はCurry化されています。それはす
 しかし、Curry化がHaskellに組み込まれているため、私たちは乗算の異なる定義から始めることもできました: 
 
 \src{snippet05}
-ここで、デカルト積\code{(m, m)}は乗算されるペアのソースになります。
+ここで、直積\code{(m, m)}は乗算されるペアのソースになります。
 
-この定義は、圏論的な積でデカルト積を置き換えることによって一般化への別の道を示唆しています。積が大局的に定義された圏を始めることができ、対象\code{m}を選んで、乗算を射として定義することができます: 
+この定義は、圏論的な積で直積を置き換えることによって一般化への別の道を示唆しています。積が大局的に定義された圏を始めることができ、対象\code{m}を選んで、乗算を射として定義することができます: 
 \[\mu \Colon m\times{}m \to m\]
 しかし、任意の圏で対象の内部を見ることはできないため、単位要素をどのように選ぶかという問題があります。そのためにはトリックがあります。要素選択が単集合からの関数と同等であることを覚えていますか？Haskellでは、\code{mempty}の定義を関数で置き換えることができます: 
 
@@ -125,13 +125,13 @@ Haskellでの\code{mappend}の定義はCurry化されています。それはす
 結合性から始めます。Haskellで、対応する等式は次のようになります: 
 
 \src{snippet07}
-他の圏に一般化する前に、個々の変数に対するその作用からそれを書き換えて、関数 (射) の等式として書く必要があります。言い換えると、それをポイントフリー表記で使用する必要があります。デカルト積が双関手であることを知っていれば、左辺を次のように書くことができます: 
+他の圏に一般化する前に、個々の変数に対するその作用からそれを書き換えて、関数 (射) の等式として書く必要があります。言い換えると、それをポイントフリー表記で使用する必要があります。直積が双関手であることを知っていれば、左辺を次のように書くことができます: 
 
 \src{snippet08}
 右辺は次のようになります: 
 
 \src{snippet09}
-これはほぼ私たちが望むものです。残念ながら、デカルト積は厳密に結合的ではない--- \code{(x, (y, z))}は\code{((x, y), z)}と同じではありません --- したがって、ポイントフリーで書くことはできません: 
+これはほぼ私たちが望むものです。残念ながら、直積は厳密に結合的ではない--- \code{(x, (y, z))}は\code{((x, y), z)}と同じではありません --- 従って、ポイントフリーで書くことはできません: 
 
 \src{snippet10}
 他方で、ペアの2つの入れ子は同型です。それらの間を変換する可逆関数、結合子 (associator) があります: 
@@ -146,15 +146,15 @@ Haskellでの\code{mappend}の定義はCurry化されています。それはす
 それらは次のように書き換えることができます: 
 
 \src{snippet14}
-同型\code{lambda}と\code{rho}はそれぞれ\code{左単位子}と\code{右単位子}と呼ばれます。これらは、単位\code{()}が同型の違いを除いてデカルト積の恒等写像であるという事実を示しています: 
+同型\code{lambda}と\code{rho}はそれぞれ\code{左単位子}と\code{右単位子}と呼ばれます。これらは、単位\code{()}が同型の違いを除いて直積の恒等写像であるという事実を示しています: 
 
 \src{snippet15}
 
 \src{snippet16}
-したがって、単位則のポイントフリー版は次のようになります: 
+従って、単位則のポイントフリー版は次のようになります: 
 
 \src{snippet17}
-私たちは、基礎となるデカルト積自体が型の圏でモノイダル乗算のように機能するという事実を使用して、\code{mu}と\code{eta}のポイントフリーなモノイダル則を定式化しました。ただし、デカルト積の結合性と単位則は、同型によってのみ有効です。
+私たちは、基礎となる直積自体が型の圏でモノイダル乗算のように機能するという事実を使用して、\code{mu}と\code{eta}のポイントフリーなモノイダル則を定式化しました。ただし、直積の結合性と単位則は、同型によってのみ有効です。
 
 これらの規則は、積と終対象を持つ任意の圏に一般化することができます。圏論的な積は、実際には同型によって結合的であり、終対象は同型によって単位です。結合子と2つの単位子は自然同型です。規則は可換図式によって表されます。
 
@@ -230,7 +230,7 @@ Haskellでの\code{mappend}の定義はCurry化されています。それはす
 \end{figure}
 
 \noindent
-また、私たちの新しいテンソル積のための恒等写像として機能できる、恒等自己関手$I$も利用可能です。さらに、関手の合成は結合的です。実際、結合則と単位則は厳格です --- 結合子や2つの単位子は必要ありません。したがって、自己関手は、関手の合成をテンソル積として、厳密なモノイダル圏を形成します。
+また、私たちの新しいテンソル積のための恒等写像として機能できる、恒等自己関手$I$も利用可能です。さらに、関手の合成は結合的です。実際、結合則と単位則は厳格です --- 結合子や2つの単位子は必要ありません。従って、自己関手は、関手の合成をテンソル積として、厳密なモノイダル圏を形成します。
 
 この圏でのモノイドとは何ですか？それは対象 --- つまり自己関手$T$；そして2つの射 --- つまり自然変換です: 
 \begin{gather*}
