--- a/src/content/3.9/algebras-for-monads.tex
+++ b/src/content/3.9/algebras-for-monads.tex
@@ -87,7 +87,7 @@ $U^T$の左随伴は$F^T$と呼ばれます。これは$\cat{C}$の対象$a$を$
 
 余単位を見てみましょう: 
 \[\varepsilon \Colon F^T \circ U^T \to I\]
-これのT-代数$(a, f)$でのコンポーネントを計算しましょう。忘却関手は$f$を忘れ、自由関手はペア$(T a, \mu_a)$を生成します。したがって、余単位$\varepsilon$のコンポーネントをT-代数$(a, f)$で定義するためには、Eilenberg-Moore圏内の正しい射、またはT-代数の準同型が必要です: 
+これのT-代数$(a, f)$でのコンポーネントを計算しましょう。忘却関手は$f$を忘れ、自由関手はペア$(T a, \mu_a)$を生成します。従って、余単位$\varepsilon$のコンポーネントをT-代数$(a, f)$で定義するためには、Eilenberg-Moore圏内の正しい射、またはT-代数の準同型が必要です: 
 \[(T a, \mu_a) \to (a, f)\]
 このような準同型は担い手$T a$を$a$に写すべきです。忘れられた評価子$f$を復活させましょう。今度はT-代数の準同型としてそれを使用します。実際に、$f$がT-代数であることを示すのと同じ交換図は、それがT-代数の準同型であることを再解釈することで示すことができます: 
 
@@ -134,7 +134,7 @@ $U^T$の左随伴は$F^T$と呼ばれます。これは$\cat{C}$の対象$a$を$
 \[F^T \dashv U^T\]
 すべての随伴はモナドを引き起こします。往復
 \[U^T \circ F^T\]
-は、対応するモナドを生じさせる$\cat{C}$の自己関手です。対象$a$に対するその作用を見てみましょう。$F^T$によって作成された自由代数は$(T a, \mu_a)$です。忘却関手$U^T$は評価子を落とします。したがって、確かに: 
+は、対応するモナドを生じさせる$\cat{C}$の自己関手です。対象$a$に対するその作用を見てみましょう。$F^T$によって作成された自由代数は$(T a, \mu_a)$です。忘却関手$U^T$は評価子を落とします。従って、確かに: 
 \[U^T \circ F^T = T\]
 予想通り、随伴の単位はモナド$T$の単位です。
 
@@ -142,7 +142,7 @@ $U^T$の左随伴は$F^T$と呼ばれます。これは$\cat{C}$の対象$a$を$
 \[\mu = R \circ \varepsilon \circ L\]
 これは、それぞれ$L$から$L$へ、$R$から$R$への恒等自然変換である二つの自然変換と、中央にある余単位である三つの自然変換の水平合成です。余単位は、T-代数$(a, f)$でのコンポーネントが$f$である自然変換です。
 
-$\mu_a$のコンポーネントを計算しましょう。最初に$F^T$の後に$\varepsilon$を水平合成します。これは$F^T a$での$\varepsilon$のコンポーネントを結果とします。$F^T$が$a$を代数$(T a, \mu_a)$に写し、$\varepsilon$が評価子を選ぶので、$\mu_a$で終わります。左側に$U^T$との水平合成は何も変えません、なぜなら$U^T$の射の作用は自明だからです。したがって、確かに、随伴から得られる$\mu$は元のモナド$T$の$\mu$と同じです。
+$\mu_a$のコンポーネントを計算しましょう。最初に$F^T$の後に$\varepsilon$を水平合成します。これは$F^T a$での$\varepsilon$のコンポーネントを結果とします。$F^T$が$a$を代数$(T a, \mu_a)$に写し、$\varepsilon$が評価子を選ぶので、$\mu_a$で終わります。左側に$U^T$との水平合成は何も変えません、なぜなら$U^T$の射の作用は自明だからです。従って、確かに、随伴から得られる$\mu$は元のモナド$T$の$\mu$と同じです。
 
 \section{Kleisli圏}
 
