--- a/src/content/2.6/yoneda-embedding.tex
+++ b/src/content/2.6/yoneda-embedding.tex
@@ -8,7 +8,7 @@
 \[a \to \cat{C}(a, -)\]
 これは対象から関手への写像であり、つまり$\cat{C}$の対象から関手圏の\emph{対象}への写像です (関手圏については\hyperref[natural-transformations]{自然変換}の節を参照してください)。関手圏$\cat{C}$から$\Set$への記法として$[\cat{C}, \Set]$を使いましょう。また、ホム関手は典型的な\hyperref[representable-functors]{表現可能関手}であることを覚えているかもしれません。
 
-二つの圏の間に対象の写像がある場合、その写像が関手であるかどうか、つまり一方の圏の射を他方の圏の射に持ち上げることができるかどうかを自然に考えます。$\cat{C}$の射は$\cat{C}(a, b)$の要素ですが、関手圏$[\cat{C}, \Set]$の射は自然変換です。したがって、私たちは射を自然変換に写す写像を探しています。
+二つの圏の間に対象の写像がある場合、その写像が関手であるかどうか、つまり一方の圏の射を他方の圏の射に持ち上げることができるかどうかを自然に考えます。$\cat{C}$の射は$\cat{C}(a, b)$の要素ですが、関手圏$[\cat{C}, \Set]$の射は自然変換です。従って、私たちは射を自然変換に写す写像を探しています。
 
 射$f \Colon a \to b$に対応する自然変換を見つけられるか見てみましょう。まず、$a$と$b$が何に写されるかを見てみましょう。それらは二つの関手、$\cat{C}(a, -)$と$\cat{C}(b, -)$に写されます。この二つの関手の間の自然変換が必要です。
 
@@ -66,7 +66,7 @@ forall x. (a -> x) -> (b -> x) \ensuremath{\cong} b -> a
 
 \section{前順序の例}
 
-この例はRobert Harperによって提案されました。それは前順序によって定義される圏への米田埋め込みの適用です。前順序は$\leqslant$ (以下) として伝統的に書かれる要素間の順序関係を持つ集合です。前順序における「pre」は、関係が推移的で反射的であることが求められるのに対し、必ずしも反対称的でないということを意味します (したがって、サイクルが可能です)。
+この例はRobert Harperによって提案されました。それは前順序によって定義される圏への米田埋め込みの適用です。前順序は$\leqslant$ (以下) として伝統的に書かれる要素間の順序関係を持つ集合です。前順序における「pre」は、関係が推移的で反射的であることが求められるのに対し、必ずしも反対称的でないということを意味します (従って、サイクルが可能です)。
 
 前順序関係を持つ集合は圏を生み出します。対象はこの集合の要素です。対象$a$から$b$への射は、対象が比較できないか、$a \leqslant b$ でない場合には存在しないか、または $a \leqslant b$ の場合に存在し、$a$ から $b$ へと向かいます。一つの対象から別の対象への射は決して一つ以上存在しません。従って、このような圏の任意のホム集合は空集合か単集合です。このような圏を\emph{薄い}と呼びます。
 
@@ -80,7 +80,7 @@ $a \leqslant b$ かつ $b \leqslant c$ ならば $a \leqslant c$ であること
 
 空集合から自身への関数 (空集合に対する恒等関数)、空集合から単集合への関数 (absurd、それは定義される必要があるが空集合の要素はないので何もしません)、単集合から自身への関数 (単集合に対する恒等関数) があります。唯一許されていない組み合わせは、単集合から空集合への写像です (そのような関数が単一の要素に対してどのような値を取るか？)。
 
-したがって、自然変換は決して単ホム集合を空ホム集合に接続しません。言い換えれば、もし $x \leqslant a$  (単ホム集合 $\cat{C}(x, a)$) ならば、$\cat{C}(x, b)$ は空であってはなりません。非空の $\cat{C}(x, b)$ は $x \leqslant b$ であることを意味します。従って、問題の自然変換の存在は、すべての $x$ に対して、$x \leqslant a$ ならば $x \leqslant b$ が必要です。
+従って、自然変換は決して単ホム集合を空ホム集合に接続しません。言い換えれば、もし $x \leqslant a$  (単ホム集合 $\cat{C}(x, a)$) ならば、$\cat{C}(x, b)$ は空であってはなりません。非空の $\cat{C}(x, b)$ は $x \leqslant b$ であることを意味します。従って、問題の自然変換の存在は、すべての $x$ に対して、$x \leqslant a$ ならば $x \leqslant b$ が必要です。
 \[\text{すべての } x に対して, x \leqslant a \Rightarrow x \leqslant b\]
 一方、余米田はこの自然変換の存在が $\cat{C}(a, b)$ が空でないこと、つまり $a \leqslant b$ であることと同等であると述べています。これらを合わせると、以下のことが得られます: 
 \[a \leqslant b \text{ は } すべての x に対して, x \leqslant a \Rightarrow x \leqslant b \text{ と同等です}\]
